--- a/resources/views/contact.ejs
+++ b/resources/views/contact.ejs
@@ -3,7 +3,7 @@
         <section class="relative block" style="height: 250px;">
           <div
             class="absolute top-0 w-full h-full bg-center bg-cover"
-            style='background-image: url("https://images.unsplash.com/photo-1499336315816-097655dcfbda?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2710&amp;q=80");'
+            style='background-image: url("https://thumbs.dreamstime.com/t/contact-us-background-businesses-email-call-message-landing-page-cover-icon-131608659.jpg");'
           >
             <span
               id="blackOverlay"
@@ -54,11 +54,9 @@
     <div class="container mx-auto px-4 lg:pt-24 lg:pb-64">
       <div class="flex flex-wrap text-center justify-center">
         <div class="w-full lg:w-6/12 px-4">
-          <h2 class="text-4xl font-semibold text-white">Build something</h2>
+          <h2 class="text-4xl font-semibold text-white">Build Something Amazing</h2>
           <p class="text-lg leading-relaxed mt-4 mb-4 text-gray-500">
-            Put the potentially record low maximum sea ice extent tihs year
-            down to low ice. According to the National Oceanic and
-            Atmospheric Administration, Ted, Scambos.
+            Are you a Brand Builder, Marketeer or Innovator. Do you have an awesome idea you would love the world to see? Contact us today lets build the future together.
           </p>
         </div>
       </div>
@@ -73,8 +71,7 @@
             Excelent Services
           </h6>
           <p class="mt-2 mb-4 text-gray-500">
-            Some quick example text to build on the card title and make up
-            the bulk of the card's content.
+            We live in a service economy where great customer service is an asset for almost every business. We are the difference between a service that’s great and excellent service.
           </p>
         </div>
         <div class="w-full lg:w-3/12 px-4 text-center">
@@ -87,8 +84,7 @@
             Grow your market
           </h5>
           <p class="mt-2 mb-4 text-gray-500">
-            Some quick example text to build on the card title and make up
-            the bulk of the card's content.
+            Understand your customer's needs and we help you develop products and services that meet those needs. You can gain insight into your customers by personalising your services and encouraging them to provide you with feedback.
           </p>
         </div>
         <div class="w-full lg:w-3/12 px-4 text-center">
@@ -99,8 +95,7 @@
           </div>
           <h5 class="text-xl mt-5 font-semibold text-white">Launch time</h5>
           <p class="mt-2 mb-4 text-gray-500">
-            Some quick example text to build on the card title and make up
-            the bulk of the card's content.
+            We work with you throught the entire life cycle of your project. From planning, development and launch.
           </p>
         </div>
       </div>
