--- a/resources/views/projects.ejs
+++ b/resources/views/projects.ejs
@@ -2,7 +2,7 @@
   <main class="profile-page">
     <section class="relative block" style="height: 250px;">
       <div class="absolute top-0 w-full h-full bg-center bg-cover"
-        style='background-image: url("https://images.unsplash.com/photo-1499336315816-097655dcfbda?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2710&amp;q=80");'>
+        style='background-image: url("https://thumbs.dreamstime.com/b/devices-laptop-computer-screen-ipad-mobile-digital-tablet-display-social-media-contact-us-landing-page-background-131608696.jpg");'>
         <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
       </div>
       <div class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden"
@@ -48,9 +48,7 @@
                   Movie Rating WebApp
                 </h4>
                 <p class="text-md font-light mt-2 text-white">
-                  The Arctic Ocean freezes every winter and much of the
-                  sea-ice then thaws every summer, and that process will
-                  continue whatever happens.
+                  This is a review-aggregation website for films and television series.<br> It was built with  React
                 </p>
               </blockquote>
             </div>
@@ -74,9 +72,7 @@
                 Lashed By Ojurire
               </h4>
               <p class="text-md font-light mt-2 text-white">
-                The Arctic Ocean freezes every winter and much of the
-                sea-ice then thaws every summer, and that process will
-                continue whatever happens.
+                Lashed by Ojurire is a personal care and beauty products store. It offers beauty products mainly eye lashes and cosmetics.
               </p>
             </blockquote>
           </div>
@@ -100,9 +96,55 @@
                 Saizzler Architectural Firm
               </h4>
               <p class="text-md font-light mt-2 text-white">
-                The Arctic Ocean freezes every winter and much of the
-                sea-ice then thaws every summer, and that process will
-                continue whatever happens.
+                Saizzler is a real-estate and Architectural firm which offers building design, materials and construction as a service.
+              </p>
+            </blockquote>
+          </div>
+        </a>
+        </div>
+
+        <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
+          <a href="http://titiekundayo.com/" target="_blank">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
+            <img alt="..." src="https://ci4.googleusercontent.com/proxy/L2-XaRinu25wYWIfgh0-PlxNkXywxpstH0RQXNctJS9h2qmh-_GoaiIMDm0S84fuQQe4W3H8Ky4fbzM-8QB3Fcn7aWhXi8FQKCzzKwB-3uwSWm3ZH6bUx8l4MsisuN_QYINATUkOIhJKBjm5ECEC0lAsAgW5vicP=s0-d-e1-ft#https://www.freelogodesign.org/file/app/client/thumb/92b375f0-997b-438d-9fa7-d9f9be538514_200x200.png"
+              class="w-full align-middle rounded-t-lg" />
+            <blockquote class="relative p-8 mb-4">
+              <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95"
+                class="absolute left-0 w-full block" style="height: 95px; top: -94px;">
+                <!-- <polygon
+                        points="-30,95 583,95 583,65"
+                        class="text-pink-600 fill-current"
+                      ></polygon> -->
+              </svg>
+              <h4 class="text-xl font-bold text-white">
+                Titi Ekundayo Blog
+              </h4>
+              <p class="text-md font-light mt-2 text-white">
+                This is a personal blog built with wordpress
+              </p>
+            </blockquote>
+          </div>
+        </a>
+        </div>
+
+        <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
+          <a href="https://play.google.com/store/apps/details?id=com.nuraltec.findr" target="_blank">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
+            <img alt="..." src="https://play-lh.googleusercontent.com/qQPrxpoTt-Q3t-Uv975z2XZLfNRuQjdEkBg1zuRXPEZx1mQdWA4mEZ6gzQhqpEPUVus=s180-rw"
+              class="w-full align-middle rounded-t-lg" />
+            <blockquote class="relative p-8 mb-4">
+              <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95"
+                class="absolute left-0 w-full block" style="height: 95px; top: -94px;">
+                <!-- <polygon
+                        points="-30,95 583,95 583,65"
+                        class="text-pink-600 fill-current"
+                      ></polygon> -->
+              </svg>
+              <h4 class="text-xl font-bold text-white">
+                Findr Application
+              </h4>
+              <p class="text-md font-light mt-2 text-white">
+                This is a security as a service application
               </p>
             </blockquote>
           </div>
@@ -111,7 +153,7 @@
 
         <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
           <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
-            <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
+            <img alt="..." src="https://www.logolounge.com//article_images/Crash_New1.png"
               class="w-full align-middle rounded-t-lg" />
             <blockquote class="relative p-8 mb-4">
               <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95"
@@ -122,60 +164,10 @@
                       ></polygon> -->
               </svg>
               <h4 class="text-xl font-bold text-white">
-                Top Notch Services
+                Humanetics
               </h4>
               <p class="text-md font-light mt-2 text-white">
-                The Arctic Ocean freezes every winter and much of the
-                sea-ice then thaws every summer, and that process will
-                continue whatever happens.
-              </p>
-            </blockquote>
-          </div>
-        </div>
-
-        <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
-            <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
-              class="w-full align-middle rounded-t-lg" />
-            <blockquote class="relative p-8 mb-4">
-              <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95"
-                class="absolute left-0 w-full block" style="height: 95px; top: -94px;">
-                <!-- <polygon
-                        points="-30,95 583,95 583,65"
-                        class="text-pink-600 fill-current"
-                      ></polygon> -->
-              </svg>
-              <h4 class="text-xl font-bold text-white">
-                Top Notch Services
-              </h4>
-              <p class="text-md font-light mt-2 text-white">
-                The Arctic Ocean freezes every winter and much of the
-                sea-ice then thaws every summer, and that process will
-                continue whatever happens.
-              </p>
-            </blockquote>
-          </div>
-        </div>
-
-        <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
-            <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
-              class="w-full align-middle rounded-t-lg" />
-            <blockquote class="relative p-8 mb-4">
-              <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95"
-                class="absolute left-0 w-full block" style="height: 95px; top: -94px;">
-                <!-- <polygon
-                        points="-30,95 583,95 583,65"
-                        class="text-pink-600 fill-current"
-                      ></polygon> -->
-              </svg>
-              <h4 class="text-xl font-bold text-white">
-                Top Notch Services
-              </h4>
-              <p class="text-md font-light mt-2 text-white">
-                The Arctic Ocean freezes every winter and much of the
-                sea-ice then thaws every summer, and that process will
-                continue whatever happens.
+                Site under construction
               </p>
             </blockquote>
           </div>
