--- a/resources/views/about.ejs
+++ b/resources/views/about.ejs
@@ -1,133 +1,110 @@
 <section class="header_main mb-24">
-    <!-- choose start -->
-    <main class="profile-page">
-        <section class="relative block" style="height: 500px;">
-          <div
-            class="absolute top-0 w-full h-full bg-center bg-cover"
-            style='background-image: url("https://images.unsplash.com/photo-1499336315816-097655dcfbda?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2710&amp;q=80");'
+  <!-- choose start -->
+  <main class="profile-page">
+      <section class="relative block" style="height: 500px;">
+        <div
+          class="absolute top-0 w-full h-full bg-center bg-cover"
+          style='background-image: url("https://thumbs.dreamstime.com/b/team-players-professionals-managers-corporate-group-icon-contact-us-website-banner-background-131609148.jpg");'
+        >
+          <span
+            id="blackOverlay"
+            class="w-full h-full absolute opacity-50 bg-black"
+          ></span>
+        </div>
+        <div
+          class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden"
+          style="height: 70px; transform: translateZ(0px);"
+        >
+          <svg
+            class="absolute bottom-0 overflow-hidden"
+            xmlns="http://www.w3.org/2000/svg"
+            preserveAspectRatio="none"
+            version="1.1"
+            viewBox="0 0 2560 100"
+            x="0"
+            y="0"
           >
-            <span
-              id="blackOverlay"
-              class="w-full h-full absolute opacity-50 bg-black"
-            ></span>
-          </div>
+            <polygon
+              class="text-gray-300 fill-current"
+              points="2560 0 2560 100 0 100"
+            ></polygon>
+          </svg>
+        </div>
+      </section>
+      <section class="relative py-16 bg-gray-300">
+        <div class="container mx-auto px-4">
           <div
-            class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden"
-            style="height: 70px; transform: translateZ(0px);"
+            class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg -mt-64"
           >
-            <svg
-              class="absolute bottom-0 overflow-hidden"
-              xmlns="http://www.w3.org/2000/svg"
-              preserveAspectRatio="none"
-              version="1.1"
-              viewBox="0 0 2560 100"
-              x="0"
-              y="0"
-            >
-              <polygon
-                class="text-gray-300 fill-current"
-                points="2560 0 2560 100 0 100"
-              ></polygon>
-            </svg>
-          </div>
-        </section>
-        <section class="relative py-16 bg-gray-300">
-          <div class="container mx-auto px-4">
-            <div
-              class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg -mt-64"
-            >
-              <div class="px-6">
+            <div class="px-6">
+              <div class="flex flex-wrap justify-center">
+                <div
+                  class="w-full lg:w-3/12 px-4 lg:order-2 flex justify-center"
+                >
+                  <div class="relative">
+                    <img
+                      alt="..."
+                      src="https://ci4.googleusercontent.com/proxy/RnPjdmCqkUQegbynPJY0Z4jeeZFvF2qCrh4V5JHgoMAaEqGmXdoKfEUg-hAt4Cta9PzSUCBs_p7hl5BEG-5CdCYYRA3dxXGtavJX2H6rmJAf97loJaXaW8rJLYJ19Kk8fcy70yguSH0-kOPMrvNC4AnwCSIHOIh6=s0-d-e1-ft#https://www.freelogodesign.org/file/app/client/thumb/d44a3f8c-2d5d-40dd-be50-84272fffc68b_200x200.png"
+                      class="shadow-xl rounded-full h-auto align-middle border-none absolute -m-16 -ml-20 lg:-ml-16"
+                      style="max-width: 150px;"
+                    />
+                  </div>
+                </div>
+                <div
+                  class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center"
+                >
+                  <div class="py-6 px-3 mt-32 sm:mt-0">
+                    <a href="/contact">
+                    <button
+                      class="bg-indigo-500 active:bg-indigo-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1"
+                      type="button"
+                      style="transition: all 0.15s ease 0s;"
+                    >
+                      Connect
+                    </button></a>
+
+                  </div>
+                </div>
+                <div class="w-full lg:w-4/12 px-4 lg:order-1">
+                  <div class="flex justify-center py-4 lg:pt-4 pt-8">
+                    
+                    
+                    
+                  </div>
+                </div>
+              </div>
+              <div class="text-center mt-12">
+                <h3
+                  class="text-4xl font-semibold leading-normal mb-2 text-gray-800 mb-2"
+                >
+                  NuralTec Solutions
+                </h3>
+                <div
+                  class="text-sm leading-normal mt-0 mb-2 text-gray-500 font-bold uppercase"
+                >
+                  <i
+                    class="fas fa-map-marker-alt mr-2 text-lg text-gray-500"
+                  ></i>
+                  Lagos, Nigeria
+                </div>
+                
+                
+              </div>
+              <div class="mt-10 py-10 border-t border-gray-300 text-center">
                 <div class="flex flex-wrap justify-center">
-                  <div
-                    class="w-full lg:w-3/12 px-4 lg:order-2 flex justify-center"
-                  >
-                    <div class="relative">
-                      <img
-                        alt="..."
-                        src="https://demos.creative-tim.com/tailwindcss-starter-project/_next/static/images/team-2-800x800-3e08ef145920c93bbe320add0d2ef58d.jpg"
-                        class="shadow-xl rounded-full h-auto align-middle border-none absolute -m-16 -ml-20 lg:-ml-16"
-                        style="max-width: 150px;"
-                      />
-                    </div>
-                  </div>
-                  <div
-                    class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center"
-                  >
-                    <div class="py-6 px-3 mt-32 sm:mt-0">
-                      <button
-                        class="bg-indigo-500 active:bg-indigo-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1"
-                        type="button"
-                        style="transition: all 0.15s ease 0s;"
-                      >
-                        Connect
-                      </button>
-                    </div>
-                  </div>
-                  <div class="w-full lg:w-4/12 px-4 lg:order-1">
-                    <div class="flex justify-center py-4 lg:pt-4 pt-8">
-                      <div class="mr-4 p-3 text-center">
-                        <span
-                          class="text-xl font-bold block uppercase tracking-wide text-gray-700"
-                          >22</span
-                        ><span class="text-sm text-gray-500">Friends</span>
-                      </div>
-                      <div class="mr-4 p-3 text-center">
-                        <span
-                          class="text-xl font-bold block uppercase tracking-wide text-gray-700"
-                          >10</span
-                        ><span class="text-sm text-gray-500">Photos</span>
-                      </div>
-                      <div class="lg:mr-4 p-3 text-center">
-                        <span
-                          class="text-xl font-bold block uppercase tracking-wide text-gray-700"
-                          >89</span
-                        ><span class="text-sm text-gray-500">Comments</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="text-center mt-12">
-                  <h3
-                    class="text-4xl font-semibold leading-normal mb-2 text-gray-800 mb-2"
-                  >
-                    NuralTec Solutions
-                  </h3>
-                  <div
-                    class="text-sm leading-normal mt-0 mb-2 text-gray-500 font-bold uppercase"
-                  >
-                    <i
-                      class="fas fa-map-marker-alt mr-2 text-lg text-gray-500"
-                    ></i>
-                    Lagos, Nigeria
-                  </div>
-                  <div class="mb-2 text-gray-700 mt-10">
-                    <i class="fas fa-briefcase mr-2 text-lg text-gray-500"></i
-                    >Solution Manager - Creative Tim Officer
-                  </div>
-                  <div class="mb-2 text-gray-700">
-                    <i class="fas fa-university mr-2 text-lg text-gray-500"></i
-                    >University of Computer Science
-                  </div>
-                </div>
-                <div class="mt-10 py-10 border-t border-gray-300 text-center">
-                  <div class="flex flex-wrap justify-center">
-                    <div class="w-full lg:w-9/12 px-4">
-                      <p class="mb-4 text-lg leading-relaxed text-gray-800">
-                        An artist of considerable range, Jenna the name taken by
-                        Melbourne-raised, Brooklyn-based Nick Murphy writes,
-                        performs and records all of his own music, giving it a
-                        warm, intimate feel with a solid groove structure. An
-                        artist of considerable range.
-                      </p>
-                      <a href="#pablo" class="font-normal text-indigo-500"
-                        >Show more</a
-                      >
-                    </div>
+                  <div class="w-full lg:w-9/12 px-4">
+                    <p class="mb-4 text-lg leading-relaxed text-gray-800">
+                     NuralTec Solutions is a world class product & software agency based in Lagos, Nigeria, committed to helping worldwide entrepreneurs and business leaders disrupt their industries. ... NuralTec Solutions provides end-to-end IT services in Web, Mobile & Cloud. From inception, UX/UI design, and development to Software deployment.
+                    </p>
+                    <!-- <a href="#pablo" class="font-normal text-indigo-500"
+                      >Show more</a
+                    > -->
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </section>
-      </main>
+        </div>
+      </section>
+    </main>
 </section>
