Ready to deploy

--- a/resources/views/about.ejs
+++ b/resources/views/about.ejs
@@ -4,7 +4,7 @@
       <section class="relative block" style="height: 500px;">
         <div
           class="absolute top-0 w-full h-full bg-center bg-cover"
-          style='background-image: url("https://thumbs.dreamstime.com/b/team-players-professionals-managers-corporate-group-icon-contact-us-website-banner-background-131609148.jpg");'
+          style='background-image: url("https://image.shutterstock.com/image-illustration/team-players-professionals-managers-corporate-260nw-1047807388.jpg");'
         >
           <span
             id="blackOverlay"
