--- a/resources/views/contact.ejs
+++ b/resources/views/contact.ejs
@@ -3,7 +3,7 @@
         <section class="relative block" style="height: 250px;">
           <div
             class="absolute top-0 w-full h-full bg-center bg-cover"
-            style='background-image: url("https://thumbs.dreamstime.com/t/contact-us-background-businesses-email-call-message-landing-page-cover-icon-131608659.jpg");'
+            style='background-image: url("https://media.istockphoto.com/photos/contact-us-email-phone-message-contact-communication-web-landing-page-picture-id884374384?k=6&m=884374384&s=170667a&w=0&h=K9FVxAdIzdO2vxexan_Mmu5Tcz_5k-dRmvhRsPiCwBQ=");'
           >
             <span
               id="blackOverlay"
