--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -6,7 +6,7 @@
       >
         <div
           class="absolute top-0 w-full h-full bg-center bg-cover"
-          style='background-image: url("https://thumbs.dreamstime.com/b/rocket-launch-startup-business-opportunity-aim-target-aspiration-success-concept-taking-off-growth-achievement-career-gr-131608996.jpg");'
+          style='background-image: url("https://image.shutterstock.com/image-illustration/rocket-launch-startup-business-opportunity-260nw-1159974085.jpg");'
         >
           <span
             id="blackOverlay"
