Footer link added

--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -272,7 +272,7 @@
             <div class="text-sm text-gray-600 font-semibold py-1">
               Copyright © 2021
               <a
-                href="https://www.creative-tim.com"
+                href="http://nuraltec.com/"
                 class="text-gray-600 hover:text-gray-900"
                 >NuralTec Inc</a
               >.
