--- a/resources/views/contact.ejs
+++ b/resources/views/contact.ejs
@@ -1,171 +1,212 @@
 <section class="header_main mb-24">
-    <main class="profile-page">
-        <section class="relative block" style="height: 250px;">
-          <div
-            class="absolute top-0 w-full h-full bg-center bg-cover"
-            style='background-image: url("https://media.istockphoto.com/photos/contact-us-email-phone-message-contact-communication-web-landing-page-picture-id884374384?k=6&m=884374384&s=170667a&w=0&h=K9FVxAdIzdO2vxexan_Mmu5Tcz_5k-dRmvhRsPiCwBQ=");'
+  <main class="profile-page">
+      <section class="relative block" style="height: 250px;">
+        <div
+          class="absolute top-0 w-full h-full bg-center bg-cover"
+          style='background-image: url("https://media.istockphoto.com/photos/contact-us-email-phone-message-contact-communication-web-landing-page-picture-id884374384?k=6&m=884374384&s=170667a&w=0&h=K9FVxAdIzdO2vxexan_Mmu5Tcz_5k-dRmvhRsPiCwBQ=");'
+        >
+          <span
+            id="blackOverlay"
+            class="w-full h-full absolute opacity-50 bg-black"
+          ></span>
+        </div>
+        <div
+          class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden"
+          style="height: 70px; transform: translateZ(0px);"
+        >
+          <svg
+            class="absolute bottom-0 overflow-hidden"
+            xmlns="http://www.w3.org/2000/svg"
+            preserveAspectRatio="none"
+            version="1.1"
+            viewBox="0 0 2560 100"
+            x="0"
+            y="0"
           >
-            <span
-              id="blackOverlay"
-              class="w-full h-full absolute opacity-50 bg-black"
-            ></span>
-          </div>
-          <div
-            class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden"
-            style="height: 70px; transform: translateZ(0px);"
-          >
-            <svg
-              class="absolute bottom-0 overflow-hidden"
-              xmlns="http://www.w3.org/2000/svg"
-              preserveAspectRatio="none"
-              version="1.1"
-              viewBox="0 0 2560 100"
-              x="0"
-              y="0"
-            >
-              <polygon
-                class="text-gray-300 fill-current"
-                points="2560 0 2560 100 0 100"
-              ></polygon>
-            </svg>
-          </div>
-        </section>
-        <!-- contact start -->
-    <section class="pb-20 relative block bg-gray-900">
-    <div
-      class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
-      style="height: 80px; transform: translateZ(0px);"
+            <polygon
+              class="text-gray-300 fill-current"
+              points="2560 0 2560 100 0 100"
+            ></polygon>
+          </svg>
+        </div>
+      </section>
+      <!-- contact start -->
+  <section class="pb-20 relative block bg-gray-900">
+  <div
+    class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
+    style="height: 80px; transform: translateZ(0px);"
+  >
+    <svg
+      class="absolute bottom-0 overflow-hidden"
+      xmlns="http://www.w3.org/2000/svg"
+      preserveAspectRatio="none"
+      version="1.1"
+      viewBox="0 0 2560 100"
+      x="0"
+      y="0"
     >
-      <svg
-        class="absolute bottom-0 overflow-hidden"
-        xmlns="http://www.w3.org/2000/svg"
-        preserveAspectRatio="none"
-        version="1.1"
-        viewBox="0 0 2560 100"
-        x="0"
-        y="0"
-      >
-        <polygon
-          class="text-gray-900 fill-current"
-          points="2560 0 2560 100 0 100"
-        ></polygon>
-      </svg>
-    </div>
-    <div class="container mx-auto px-4 lg:pt-24 lg:pb-64">
-      <div class="flex flex-wrap text-center justify-center">
-        <div class="w-full lg:w-6/12 px-4">
-          <h2 class="text-4xl font-semibold text-white">Build Something Amazing</h2>
-          <p class="text-lg leading-relaxed mt-4 mb-4 text-gray-500">
-            Are you a Brand Builder, Marketeer or Innovator. Do you have an awesome idea you would love the world to see? Contact us today lets build the future together.
-          </p>
-        </div>
-      </div>
-      <div class="flex flex-wrap mt-12 justify-center">
-        <div class="w-full lg:w-3/12 px-4 text-center">
-          <div
-            class="text-gray-900 p-3 w-12 h-12 shadow-lg rounded-full bg-white inline-flex items-center justify-center"
-          >
-            <i class="fas fa-medal text-xl"></i>
-          </div>
-          <h6 class="text-xl mt-5 font-semibold text-white">
-            Excelent Services
-          </h6>
-          <p class="mt-2 mb-4 text-gray-500">
-            We live in a service economy where great customer service is an asset for almost every business. We are the difference between a service that’s great and excellent service.
-          </p>
-        </div>
-        <div class="w-full lg:w-3/12 px-4 text-center">
-          <div
-            class="text-gray-900 p-3 w-12 h-12 shadow-lg rounded-full bg-white inline-flex items-center justify-center"
-          >
-            <i class="fas fa-poll text-xl"></i>
-          </div>
-          <h5 class="text-xl mt-5 font-semibold text-white">
-            Grow your market
-          </h5>
-          <p class="mt-2 mb-4 text-gray-500">
-            Understand your customer's needs and we help you develop products and services that meet those needs. You can gain insight into your customers by personalising your services and encouraging them to provide you with feedback.
-          </p>
-        </div>
-        <div class="w-full lg:w-3/12 px-4 text-center">
-          <div
-            class="text-gray-900 p-3 w-12 h-12 shadow-lg rounded-full bg-white inline-flex items-center justify-center"
-          >
-            <i class="fas fa-lightbulb text-xl"></i>
-          </div>
-          <h5 class="text-xl mt-5 font-semibold text-white">Launch time</h5>
-          <p class="mt-2 mb-4 text-gray-500">
-            We work with you throught the entire life cycle of your project. From planning, development and launch.
-          </p>
-        </div>
+      <polygon
+        class="text-gray-900 fill-current"
+        points="2560 0 2560 100 0 100"
+      ></polygon>
+    </svg>
+  </div>
+  <div class="container mx-auto px-4 lg:pt-24 lg:pb-64">
+    <div class="flex flex-wrap text-center justify-center">
+      <div class="w-full lg:w-6/12 px-4">
+        <h2 class="text-4xl font-semibold text-white">Build Something Amazing</h2>
+        <p class="text-lg leading-relaxed mt-4 mb-4 text-gray-500">
+          Are you a Brand Builder, Marketeer or Innovator. Do you have an awesome idea you would love the world to see? Contact us today lets build the future together.
+        </p>
       </div>
     </div>
-  </section>
-  <!-- STOP  -->
-  
-  <section class="relative block py-24 lg:pt-0 bg-gray-900">
-    <div class="container mx-auto px-4">
-      <div class="flex flex-wrap justify-center lg:-mt-64 -mt-48">
-        <div class="w-full lg:w-6/12 px-4">
-          <div
-            class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-gray-300"
-          >
-            <div class="flex-auto p-5 lg:p-10">
-              <h4 class="text-2xl font-semibold">Want to work with us?</h4>
-              <p class="leading-relaxed mt-1 mb-4 text-gray-600">
-                Complete this form and we will get back to you in 24 hours.
-              </p>
-              <div class="relative w-full mb-3 mt-8">
-                <label
-                  class="block uppercase text-gray-700 text-xs font-bold mb-2"
-                  for="full-name"
-                  >Full Name</label
-                ><input
-                  type="text"
-                  class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
-                  placeholder="Full Name"
-                  style="transition: all 0.15s ease 0s;"
-                />
-              </div>
-              <div class="relative w-full mb-3">
-                <label
-                  class="block uppercase text-gray-700 text-xs font-bold mb-2"
-                  for="email"
-                  >Email</label
-                ><input
-                  type="email"
-                  class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
-                  placeholder="Email"
-                  style="transition: all 0.15s ease 0s;"
-                />
-              </div>
-              <div class="relative w-full mb-3">
-                <label
-                  class="block uppercase text-gray-700 text-xs font-bold mb-2"
-                  for="message"
-                  >Message</label
-                ><textarea
-                  rows="4"
-                  cols="80"
-                  class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
-                  placeholder="Type a message..."
-                ></textarea>
-              </div>
-              <div class="text-center mt-6">
-                <button
-                  class="bg-gray-900 text-white active:bg-gray-700 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1"
-                  type="button"
-                  style="transition: all 0.15s ease 0s;"
-                >
-                  Send Message
-                </button>
-              </div>
+    <div class="flex flex-wrap mt-12 justify-center">
+      <div class="w-full lg:w-3/12 px-4 text-center">
+        <div
+          class="text-gray-900 p-3 w-12 h-12 shadow-lg rounded-full bg-white inline-flex items-center justify-center"
+        >
+          <i class="fas fa-medal text-xl"></i>
+        </div>
+        <h6 class="text-xl mt-5 font-semibold text-white">
+          Topnotch Services
+        </h6>
+        <p class="mt-2 mb-4 text-gray-500">
+          We live in a service economy where great customer service is an asset for almost every business. We are the difference between a service that’s great and excellent service.
+        </p>
+      </div>
+      <div class="w-full lg:w-3/12 px-4 text-center">
+        <div
+          class="text-gray-900 p-3 w-12 h-12 shadow-lg rounded-full bg-white inline-flex items-center justify-center"
+        >
+          <i class="fas fa-retweet text-xl"></i>
+        </div>
+        <h5 class="text-xl mt-5 font-semibold text-white">
+          Grow your market
+        </h5>
+        <p class="mt-2 mb-4 text-gray-500">
+          Understand your customer's needs and we help you develop products and services that meet those needs. You can gain insight into your customers by personalising your services and encouraging them to provide you with feedback.
+        </p>
+      </div>
+      <div class="w-full lg:w-3/12 px-4 text-center">
+        <div
+          class="text-gray-900 p-3 w-12 h-12 shadow-lg rounded-full bg-white inline-flex items-center justify-center"
+        >
+          <i class="fas fa-poll text-xl"></i>
+        </div>
+        <h5 class="text-xl mt-5 font-semibold text-white">Scalable solutions</h5>
+        <p class="mt-2 mb-4 text-gray-500">
+          We provide scalable and portable user-friendly solutions
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- STOP  -->
+
+<section class="relative block py-24 lg:pt-0 bg-gray-900">
+  <div class="container mx-auto px-4">
+    <div class="flex flex-wrap justify-center lg:-mt-64 -mt-48">
+      <div class="w-full lg:w-6/12 px-4">
+        <div
+          class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-gray-300"
+        >
+          <div class="flex-auto p-5 lg:p-10">
+            <h4 class="text-2xl font-semibold">Want to work with us?</h4>
+            <p class="leading-relaxed mt-1 mb-4 text-gray-600">
+              Complete this form and we will get back to you in 24 hours.
+            </p>
+            <div class="relative w-full mb-3 mt-8">
+              <label
+                class="block uppercase text-gray-700 text-xs font-bold mb-2"
+                for="full-name"
+                >Full Name</label
+              ><input
+                type="text"
+                class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
+                placeholder="Full Name"
+                id = "cName"
+                style="transition: all 0.15s ease 0s;"
+              />
+            </div>
+            <div class="relative w-full mb-3">
+              <label
+                class="block uppercase text-gray-700 text-xs font-bold mb-2"
+                for="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                
+                >Email</label
+              ><input
+                type="email"
+                class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
+                placeholder="Email"
+                id = "cEml"
+                style="transition: all 0.15s ease 0s;"
+              />
+            </div>
+            <div class="relative w-full mb-3">
+              <label
+                class="block uppercase text-gray-700 text-xs font-bold mb-2"
+                for="message"
+                >Message</label
+              ><textarea
+                rows="4"
+                cols="80"
+                id = "cMsg"
+                class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
+                placeholder="Type a message..."
+              ></textarea>
+            </div>
+            <div class="text-center mt-6">
+              <button
+                class="bg-gray-900 text-white active:bg-gray-700 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1"
+                type="button"
+                style="transition: all 0.15s ease 0s;"
+                onclick = "sendMail()"
+              >
+                Send Message
+              </button>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+  <script>
+    function sendMail(){
+  var myHeaders = new Headers();
+  myHeaders.append("Content-Type", "application/json");
+  
+  var eml = document.getElementById("cEml");
+  var cxEmail = eml.value;
+  var cxName =  document.getElementById("cName").value;
+  var cxVMsg =  document.getElementById("cMsg").value;
+  if (cxEmail == ""||cxName ==""|| cxVMsg ==""){
+    alert ("All fields are Mandatory. Kindly fill and retry")
+    return ;
+  }
+  if (!eml.checkValidity()){
+    alert ("Invalid Email. Kindly check and retry")
+    return ;
+  }
+  var data = JSON.stringify({
+      "recieverAddress": [cxEmail],
+      "messageBody": `Hello ${cxName}, <br><br> Thanks for reaching out. We understand that you have an enquiry regarding - ${cxVMsg}. <br><br>Kindly note that you will get a response from us as soon as possible.<br><br> Best Regards, <br>NuralTec Team`,
+      "messageSubject": "Thanks for contacting NuralTec!"
+  });
+  var requestOptions = {
+  method: 'POST',
+  headers: myHeaders,
+  body: data,
+  redirect: 'follow'
+  };
+  fetch("https://tstfndr.herokuapp.com/mails/send", requestOptions)
+  .then(response => response.text())
+  .then(result => console.log(""))
+  .catch(error => console.log('error', error));
+  
+  alert("Thanks for reaching out")
+}
+  </script>
+</section>
 <!-- contact end -->
-      </main>
+    </main>
 </section>
